--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,14 +15,14 @@ body{
     background-size: cover;
 }
 .logo{
-    width: 10%;
+    width: 15%;
 }
 
 .header{
     width: 100%;
     position: absolute;
     top: 0;
-    padding: 20px;
+    padding: 20px 50px;
 }
 
 .navbar-brand{
